Fix layout issues

--- a/Frontend/static/global.css
+++ b/Frontend/static/global.css
@@ -3,6 +3,13 @@
     padding: 0;
 
     font-family: "Lato", sans-serif;
-    font-weight: 900;
+    font-weight: 700;
     font-style: normal;
+}
+
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
